update readme, remove unnecessary package

--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "micro": "^6.1.0",
     "mongodb": "^2.2.11",
     "perfy": "^1.1.2",
-    "redis": "^2.6.3",
-    "then-sleep": "^1.0.1"
+    "redis": "^2.6.3"
   }
 }
